--- a/config/config.yml
+++ b/config/config.yml
@@ -1,7 +1,7 @@
 common: &common
   pagination_per_page: 20
 
-  display_app_name: "QARoR"
+  display_app_name: "KeyStack"
 
   # for mailer only
   app_domain: "qaror.herokuapp.com"
