--- a/config/database.yml
+++ b/config/database.yml
@@ -1,23 +1,23 @@
 development:
-  username: pguser
+  username: root
   password: Dragon16
-  adapter: postgresql
-  database: qaror
+  adapter: mysql2
+  database: keystack_development
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  username: pguser
+  username: root
   password: Dragon16
-  adapter: postgresql
-  database: qaror_test
+  adapter: mysql2
+  database: keystack_test
   host: localhost
 
 production:
-  username: pguser
+  username: root
   password: Dragon16
-  adapter: postgresql
-  database: qaror_prod
+  adapter: mysql2
+  database: keystack_prod
   host: localhost
